test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_function_call_two_args.draco
proc main() void : a := func(1,2); corp;

