test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_true_as_identifier.draco
int true;
 
proc main() void : a := 1; corp;
